--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,8 @@
             </div>
             <div class="contact">
               <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
+                <a href="https://github.com/funkfinger">github.com/funkfinger</a><br />
+                <a href="https://twitter.com/funkfinger">twitter.com/funkfinger</a><br />
               </p>
             </div>
           </div>
