tweaks to visuals

--- a/_layouts/foundation.html
+++ b/_layouts/foundation.html
@@ -13,6 +13,7 @@
 
     <link href="/css/app.css" rel="stylesheet">
     <link href="/css/syntax.css" rel="stylesheet">
+    <link href="/css/custom.css" rel="stylesheet">
     
   </head>
   <body>
@@ -89,12 +90,14 @@
  
       <!-- Footer -->
  
-      <footer class="row">
+      <footer class="foot row">
         <div class="large-12 columns">
           <hr />
           <div class="row">
             <div class="large-6 columns">
-              <p>&copy; Copyright, Jay Wiggins, 2013</p>
+              <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
+                <!-- <br /> -->
+                <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Jay, Trying to Remember</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://funkfinger.github.io" property="cc:attributionName" rel="cc:attributionURL">Jay Wiggins</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
             </div>
             <div class="large-6 columns">
               <!-- <ul class="inline-list right">
