--- a/_layouts/foundation.html
+++ b/_layouts/foundation.html
@@ -93,20 +93,26 @@
       <footer class="foot row">
         <div class="large-12 columns">
           <hr />
-          <div class="row">
+<!--           <div class="row">
             <div class="large-6 columns">
-              <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
-                <!-- <br /> -->
-                <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Jay, Trying to Remember</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://funkfinger.github.io" property="cc:attributionName" rel="cc:attributionURL">Jay Wiggins</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
-            </div>
+ -->
+<p xmlns:dct="http://purl.org/dc/terms/">
+<a rel="license" href="http://creativecommons.org/publicdomain/mark/1.0/">
+<img src="http://i.creativecommons.org/p/mark/1.0/80x15.png"
+     style="border-style: none;" alt="Public Domain Mark" />
+</a>
+<!-- <br /> -->
+This work (<span property="dct:title">Jay, Trying to Remember</span>, by <a href="http://funkfinger.github.io" rel="dct:creator"><span property="dct:title">Jay Wiggins</span></a>), is free of known copyright restrictions.
+</p>
+<!--             </div>
             <div class="large-6 columns">
-              <!-- <ul class="inline-list right">
+ -->              <!-- <ul class="inline-list right">
                 <li><a href="#">Link 1</a></li>
                 <li><a href="#">Link 2</a></li>
                 <li><a href="#">Link 3</a></li>
                 <li><a href="#">Link 4</a></li>
               </ul> -->
-            </div>
+<!--             </div>
           </div>
-        </div>
+ -->        </div>
       </footer>
