small tweaks, categories and tags are not working, bit no biggie

--- a/_layouts/foundation.html
+++ b/_layouts/foundation.html
@@ -59,6 +59,29 @@
  
  
  
+          <h5>Tags</h5>
+          <ul class="side-nav">
+
+            {% for tag in site.tags %}
+              <li><a href="{{ post.url }}">{{ tag[0] }}</a></li>
+            {% endfor %}
+
+
+            <!-- <li><a href="#">News</a></li>
+            <li><a href="#">Code</a></li>
+            <li><a href="#">Design</a></li>
+            <li><a href="#">Fun</a></li>
+            <li><a href="#">Weasels</a></li> -->
+          </ul>
+ 
+          <!-- <div class="panel">
+            <h5>Featured</h5>
+            <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow.</p>
+            <a href="#">Read More →</a>
+          </div> -->
+ 
+        </aside>
+
           <h5>Categories</h5>
           <ul class="side-nav">
 
@@ -81,6 +104,9 @@
           </div> -->
  
         </aside>
+
+
+
  
         <!-- End Sidebar -->
       </div>
